# RoboticsLab_Technical_Project

./: README.md
iiwa_description/config/: iiwa_controllers.yaml  initial_positions.yaml
iiwa_description/gazebo/: iiwa.gazebo.xacro
iiwa_description/urdf/: iiwa.urdf.xacro
ros2_fra2mo/config/: navigation.yaml
ros2_fra2mo/launch/: gazebo_fra2mo.launch.py
ros2_fra2mo/maps/: map.pgm  map.yaml
ros2_fra2mo/meshes/: Sphere.stl
ros2_fra2mo/models/: inspection_panel
ros2_fra2mo/scripts/: reach_goal.py
ros2_fra2mo/urdf/: fra2mo_base_macro.xacro  lidar_gazebo_macro.xacro  utility_macro.xacro
ros2_fra2mo/worlds/: leonardo_inspection_world.sdf
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: KdlFeedback.action
ros2_kdl_package/config/: args.yaml
ros2_kdl_package/include/: kdl_control.h  kdl_planner.h
ros2_kdl_package/launch/: ros2_kdl.launch.py
ros2_kdl_package/src/: kdl_control.cpp  ros2_kdl_action_client.cpp  ros2_kdl_node.cpp
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/launch/: simulation.launch.py  simulation_old.launch.py
simulation_launch/models/pallet/: model.config  pallet.sdf
simulation_launch/models/pallet/mesh/: pallet.stl
simulation_launch/models/race_field/: model.sdf
simulation_launch/models/race_field/mesh/: campo_gara.stl
simulation_launch/models/rack/: model.config  rack.sdf
simulation_launch/models/rack/mesh/: rack.stl
simulation_launch/rviz_conf/: conf_base.rviz  fra2mo_conf.rviz
simulation_launch/scripts/: inspection_cv_node.py
simulation_launch/world/: pallet_station.sdf
